@@ -8,5 +8,5 @@ public class TravellingSalesmanServiceApplication {
     public static void main(String[] args) {
         SpringApplication.run(TravellingSalesmanServiceApplication.class, args);
     }
-
+//--add-modules=jdk.incubator.vector --enable-preview
 }
